# Tachikoma

./: README.md  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: app.old.tsx  app.tsx  home.tsx  main.tsx  settings.tsx
src-tauri/: Cargo.toml  src-tauri - Shortcut.lnk  tauri.conf.json
src-tauri/capabilities/: desktop.json  mobile.json
src-tauri/src/: frontend_api.rs  lib.rs  llm_providers.rs  main.rs  settings.rs
src-tauri/src/frontend_api/: llm_providers.rs  settings.rs
src-tauri/src/llm_providers/: cohere.rs
src/assets/: bubble.css
src/components/: agent-item.tsx  bubble.tsx  chat-button-bar.tsx  chat-header.tsx  chat-item.tsx  chat.tsx  conversation-item.tsx  mode-toggle.tsx  model-configurator.old.tsx  model-configurator.tsx
src/contexts/: assistant-provider.tsx  route-provider.tsx  settings-provider.tsx
src/lib/: chat-types.ts  user.ts  utils.ts
src/llm-providers/: cohere.ts  groq.ts  llm-provider-base.ts
src/pages/: agent-settings.tsx  app-settings.tsx  chat.tsx  conversations.tsx  home.tsx  layout.tsx  nopage.tsx
